2007-02-24  Arno Rehn  <arno@arnorehn.de>

	* Added ReadProperty and WriteProperty classes. Now custom properties can
	  be accessed via Property() and SetProperty() (and dbus?). However there seems
	  to be a problem with marshalling, see FIXMEs in the code. The workaround should
	  work as well as with marshalling, though.
	* Autogeneration of Q_PROPERTY signatures and types now works properly.
	* Flags of properties should now be set correctly.
	
2007-02-21  Arno Rehn  <arno@arnorehn.de>

	* QMetaObjects are now correctly inherited.
	* If there was a request for a QMetaObject of a native Qt class, a new
	  QMetaObject was created with all the signals and slots of the class and
	  the native QMetaObject was just used as a parent. The resulting object had
	  every definition twice. Fixed.

2007-02-20  Richard Dale  <rdale@foton.es>

	* Commented out QList<QHostAddress> marshallers as it caused a linking
	  problem on Mac OS X
	* Change 'ADD_LIBRARY (qyoto SHARED ${SRC_CPP})' to 
	  'ADD_LIBRARY (qyoto MODULE ${SRC_CPP})' to build libqyoto.so, rather
	  than libqyoto.dyld on Mac OS X

2007-02-19  Arno Rehn  <arno@arnorehn.de>

	* Implemented adding Q_PROPERTY's to the QMetaObject. Next step is
	  adding classes like InvokeSlot for properties in qyoto.cpp.
	* When retrieving slot signatures, also include the slots of the superclass,
	  if it isn't a native C++ class. Same has to be done for signals.
	* Did some code cleanup:
		* Moved QyotoMetaData class into a seperate file, QyotoMetaData.cs
		* Made code in QyotoMetaData better readable

2007-02-14  Arno Rehn  <arno@arnorehn.de>

	* Fixed compilation error in t14
	* Modified all CMakeLists.txt to produce nicer output

2007-02-14  Richard Dale  <rdale@foton.es>

	* Added cmake files for building the csrcc tool
	* Fix the cmake file for building the uics tool
	* Specify the ${UICS_PATH} and ${CSRCC_PATH} as their relative positions
	  within the qyoto project.

2007-02-13  Richard Dale  <rdale@foton.es>
