@@ -82,9 +82,6 @@ namespace Qyoto {
 		public static extern bool InstallIsSmokeClass(IsSmokeClassFn callback);
 		
 		[DllImport("libqyoto", CharSet=CharSet.Ansi)]
-		public static extern bool InstallGetParentMetaObject(GetIntPtr callback);
-		
-		[DllImport("libqyoto", CharSet=CharSet.Ansi)]
 		public static extern bool InstallGetProperty(OverridenMethodFn callback);
 		
 		[DllImport("libqyoto", CharSet=CharSet.Ansi)]
@@ -209,18 +206,6 @@ namespace Qyoto {
 			}
 			SetSmokeObject(instance, smokeObjectPtr);
 			return;
-		}
-		
-		public static IntPtr GetParentMetaObject(IntPtr type) {
-			Type t = (Type) ((GCHandle) type).Target;
-// 			Type t = Type.GetType(name);
-			Type baseType = t.BaseType;
-			QMetaObject mo = Qyoto.GetMetaObject(baseType);
-			if (mo == null) {
-				Console.WriteLine("Qyoto.GetMetaObject() returned NULL");
-				return (IntPtr) 0;
-			}
-			return (IntPtr) GCHandle.Alloc(mo);
 		}
 		
 		public static IntPtr GetProperty(IntPtr obj, string propertyName) {
@@ -566,7 +551,6 @@ namespace Qyoto {
 		static private CreateInstanceFn createInstance = new CreateInstanceFn(CreateInstance);
 		static private InvokeCustomSlotFn invokeCustomSlot = new InvokeCustomSlotFn(SmokeInvocation.InvokeCustomSlot);
 		static private IsSmokeClassFn isSmokeClass = new IsSmokeClassFn(Qyoto.IsSmokeClass);
-		static private GetIntPtr getParentMetaObject = new GetIntPtr(GetParentMetaObject);
 		
 		static private OverridenMethodFn getProperty = new OverridenMethodFn(GetProperty);
 		static private SetPropertyFn setProperty = new SetPropertyFn(SetProperty);
@@ -607,7 +591,6 @@ namespace Qyoto {
 			InstallCreateInstance(createInstance);
 			InstallInvokeCustomSlot(invokeCustomSlot);
 			InstallIsSmokeClass(isSmokeClass);
-			InstallGetParentMetaObject(getParentMetaObject);
 			
 			InstallGetProperty(getProperty);
 			InstallSetProperty(setProperty);
